--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -17,27 +17,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 30px; 
-  background: linear-gradient(90deg, #6a0dad, #7b1fa2, #b23aee); 
-  color: white;
-  font-size: 18px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  padding: 20px 40px;
   position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  z-index: 1000;
-  border-bottom-left-radius: 12px; 
-  border-bottom-right-radius: 12px;
+  z-index: 100; 
+  background: transparent; 
+  /* justify-content: flex-start; */
 }
 
 .navbar .app-name {
   font-size: 26px;
+  margin-left: -30px;
   font-weight: bold;
   cursor: pointer;
   color: white;
   transition: transform 0.3s ease-in-out;
-  animation: softBounce 2s infinite ease-in-out; /* Subtle bounce */
+  animation: softBounce 2s infinite ease-in-out; 
 }
 
 .navbar .app-name:hover {
@@ -69,7 +66,7 @@
 }
 
 .navbar ul li button:hover {
-  background: rgba(255, 255, 255, 0.15);
+  /* background: rgba(255, 255, 255, 0.15); */
   transform: scale(1.08);
 }
 
