--- a/frontend/src/home.css
+++ b/frontend/src/home.css
@@ -1,19 +1,46 @@
 .full-page {
-  position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+  background-image: url('./bg4.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
+
 .background-image {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   z-index: -1;
 }
+
+.centered-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  z-index: 1;
+}
+
+.help-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 2;
+}
+
+
+
 
 .centered-text {
   position: absolute;
